@@ -17,7 +17,7 @@ LIB_PATCHLEVEL=0
 
 dnl libout123
 OUTAPI_VERSION=2
-OUTLIB_PATCHLEVEL=0
+OUTLIB_PATCHLEVEL=1
 
 dnl Since we want to be backwards compatible, both sides get set to API_VERSION.
 LIBMPG123_VERSION=$API_VERSION:$LIB_PATCHLEVEL:$API_VERSION
@@ -134,45 +134,34 @@ else
 	AC_DEFINE(DYNAMIC_BUILD, 1, [ Define if building with dynamcally linked libmpg123])
 fi
 
-if test x"$modules" = xdisabled
-then
-	echo "Modules disabled, not checking for libltdl."
-else
-	have_ltdl=no
-	AC_CHECK_LIB( [ltdl], [lt_dlinit],
-		[ AC_CHECK_HEADER( [ltdl.h],
-			[
-				have_ltdl=yes
-				AC_DEFINE(HAVE_LTDL, 1, [ Define if libltdl is available ])
-			],
-			[
-				AC_MSG_WARN([Found ltdl library but NOT the header file on your system])
-			] )
-		],
-		[
-			AC_MSG_WARN([ltdl library not found])
-		]
-	)
-	if test x"$modules" = xenabled -a x"$have_ltdl" = xno; then
-		AC_MSG_ERROR([Modules enabled but no libltdl found! This will not work...])
-	fi
-	if test x"$modules" = xauto; then
-		if test x"$have_ltdl" = xyes; then
-			modules=enabled
-			echo "We found libltdl: Modules enabled."
-		else
-			echo "We did not find libltdl: Modules disabled."
-			modules=disabled
-		fi
-	fi
-fi
+dnl We need the windows header also for checking the module mechanism.
+AC_CHECK_HEADER(windows.h)
 
 if test x"$modules" = xdisabled
 then
-	echo "Modules disabled."
+  echo "Modules disabled, not checking for dynamic loading."
 else
-# Enable module support in source code
-AC_DEFINE( USE_MODULES, 1, [Define if modules are enabled] )
+  have_dl=no
+  # The dlopen() API is either in libc or in libdl.
+  if test x$ac_cv_header_windows_h = xyes; then
+    AC_CHECK_FUNCS( LoadLibrary GetProcAddress FreeLibrary, [have_dl=yes] )
+  else
+    AC_SEARCH_LIBS(dlopen, dl)
+    AC_CHECK_HEADER(dlfcn.h)
+    AC_CHECK_FUNCS(dlopen dlsym dlclose, [have_dl=yes])
+  fi
+  if test x"$modules" = xenabled -a x"$have_dl" = xno; then
+    AC_MSG_ERROR([Modules enabled but no runtime loader found! This will not work...])
+  fi
+  if test x"$modules" = xauto; then
+    if test x"$have_dl" = xyes; then
+      modules=enabled
+      echo "We found a runtime loader: Modules enabled."
+    else
+      echo "We did not find a runtime loader: Modules disabled."
+      modules=disabled
+    fi
+  fi
 fi
 
 dnl Configure libtool
@@ -180,6 +169,15 @@ dnl Configure libtool
 AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
+if test x"$modules" = xdisabled
+then
+  echo "Modules disabled."
+else
+  # Enable module support in source code
+  AC_DEFINE( USE_MODULES, 1, [Define if modules are enabled] )
+  # Export the module file suffix as LT_MODULE_EXT
+  LT_SYS_MODULE_EXT
+fi
 AM_CONDITIONAL( [HAVE_MODULES], [test "x$modules" = xenabled] )
 
 AC_SUBST(LT_LDFLAGS)
@@ -894,16 +892,6 @@ dnl ############## Modules
 
 # Dummy audio output module is always supported
 output_modules="dummy"
-
-# Decide on module file suffix. Setting it != .la allows removal of .la files.
-AC_ARG_WITH([module-suffix], [
-  --with-module-suffix=.la            (default) Use libtool's .la files for loading modules.
-  --with-module-suffix=[.so|.dll|...] Specify the native module file suffix to bypass .la files.
-])
-if test x"$with_module_suffix" = x; then
-  with_module_suffix=.la
-fi
-AC_DEFINE_UNQUOTED( MODULE_FILE_SUFFIX, "$with_module_suffix", [The suffix for module files.] )
 
 dnl ############## Assembler, compiler properties
 
@@ -1710,7 +1698,13 @@ do
 			# Does not work... instead just check for header
 			# AC_CHECK_LIB( [winmm], [waveOutOpen] )
 			WIN32_LIBS=-lwinmm
-			AC_CHECK_HEADERS([windows.h], output_modules="$output_modules win32" HAVE_WIN32=yes, HAVE_WIN32=no check_failed=yes)
+			if test x$ac_cv_header_windows_h = xyes; then
+				output_modules="$output_modules win32"
+				HAVE_WIN32=yes
+			else
+				HAVE_WIN32=no
+				check_failed=yes
+			fi
 		;;
 		win32_wasapi)
 			# Check for windows ... and win32 wasapi audio
@@ -2145,13 +2139,16 @@ AC_DEFINE_UNQUOTED(INDEX_SIZE, $seektable, [size of the frame index seek table])
 
 dnl ############## Win32 function checks
 # Check if we want Unicode for Win32. Cygwin does not need _wopen
-win32_specific_codes=disabled
+if test x$have_cv_header_windows_h = xyes; then
+  win32_specific_codes=enabled
+else
+  win32_specific_codes=disabled
+fi
 win32_unicode=unneeded
 win32_sockets=disabled
 win32_sockets_working=no
 win32_wide_working=no
 win32_winver_bump=no
-AC_CHECK_HEADERS([windows.h], [win32_specific_codes=enabled])
 
 if test "x$win32_specific_codes" = xenabled && test "x$host_os" != "xcygwin"; then
 #### Check for Wide functions
@@ -2426,7 +2423,6 @@ Note: Disabling core features is not commonly done and some combinations might n
 echo
 
 echo "  Modules ................. $modules"
-echo "  Module suffix ........... $with_module_suffix"
 echo "  Checked audio modules ... $check_modules
   Detected audio support ..$output_modules
   Default output module ... $default_output_module
